--- a/src/main/resources/templates/expert-main.html
+++ b/src/main/resources/templates/expert-main.html
@@ -41,7 +41,8 @@
                         </text>
                         <div class="card-body">
                             <p class="card-text">Подробнее.</p>
-                            <button href="/example1" type="button" class="btn btn-sm btn-outline-secondary"><a href="/example1">Посмотреть</a></button>
+                            <button href="/example1" type="button" class="btn btn-sm btn-outline-secondary"><a
+                                    href="/example1">Посмотреть</a></button>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                 </div>
@@ -63,7 +64,8 @@
                             <p class="card-text">Подробнее.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/example2">Посмотреть</a></button>
+                                    <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/example2">Посмотреть</a>
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -83,7 +85,8 @@
                             <p class="card-text">Подробнее.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Посмотреть</button>
+                                    <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/example3">Посмотреть</a>
+                                    </button>
                                 </div>
                             </div>
                         </div>
