--- a/src/main/resources/templates/expert-main.html
+++ b/src/main/resources/templates/expert-main.html
@@ -17,10 +17,10 @@
                 <h1 class="font-weight-light">Автоматизированное обследование здания</h1>
                 <p class="lead text-muted">Наше преимущество – скорость выполнения изыскательских работ на объекте, а
                     именно в автоматизации данных работ, что позволяет увеличить скорость составления отчета на 60%.</p>
-                <p>
-                    <a href="#" class="btn btn-primary my-2">НАЧАТЬ</a>
-                    <a href="#" class="btn btn-secondary my-2">Узнать подробнее</a>
-                </p>
+
+                <button href="/example-all" type="button" class="btn btn-secondary my-2"><a
+                        href="/example-all">Узнать подробнее</a></button>
+
             </div>
         </div>
     </section>
