--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -102,7 +102,7 @@
                         <label>password</label>
                         <input class="form-control" type="password" placeholder="password">
                     </div>
-                    <button type="button" class="btn btn-default"><a href="http://localhost:8890/expertise">Login </a></button>
+                    <button type="button" class="btn btn-default"><a href="/expertise">Login </a></button>
                 </form>
             </div>
         </div>
