--- a/src/main/resources/templates/sections/hat.html
+++ b/src/main/resources/templates/sections/hat.html
@@ -9,8 +9,8 @@
         </a>
 
         <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-            <a class="me-3 py-2 text-dark text-decoration-none" href="/">В начало </a>
-            <a class="me-3 py-2 text-dark text-decoration-none" href="/expertise"> Про нас </a>
+            <a class="me-3 py-2 text-dark text-decoration-none" href="/login">В начало </a>
+            <a class="me-3 py-2 text-dark text-decoration-none" href="/example-all"> Про нас </a>
             <a class="me-3 py-2 text-dark text-decoration-none" href="/sample/add"> Добавить здание</a>
             <a class="me-3 py-2 text-dark text-decoration-none" href="/sample"> Примеры отчетов</a>
         </nav>
